2021-04-03  Luca Saiu  <positron@gnu.org>

	* etc/hacking.org: Documentation.
	* etc/poke.rec: Documentation.
	* libpoke/pvm.jitter (wrapped-functions): Update.
	Add new attributes for compatibility with Jitter changes and
	no-threading, and for performance.
	* HACKING: Regenerate.

2021-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.h (struct pkl_trans_payload): Add endianness
	stack.
	(pkl_trans_init_payload): Initialize endian.
	* libpoke/pkl-trans.c (PKL_TRANS_ENDIAN): Define.
	(PKL_TRANS_PUSH_ENDIAN): Likewise.
	(PKL_TRANS_POP_ENDIAN): Likewise.
	(pkl_trans1_pr_struct_type_field): New handler.
	(pkl_trans1_ps_struct_type_field): Likewise.
	(pkl_phase_trans1): Register new handlers.
	* libpoke/pkl-anal.c (pkl_anal2_ps_struct_type_field): Remove
	error check and add warning.
	* testsuite/poke.map/maps-structs-endian-3.pk: New test.
	* testsuite/poke.map/maps-structs-endian-4.pk: Likewise.
	* testsuite/poke.map/maps-structs-endian-5.pk: Likewise.
	* testsuite/poke.map/maps-structs-endian-6.pk: Likewise.
	* doc/poke.texi (Field Endianness): Note that `little' and `big'
	are valid for any kind of field.
	* testsuite/poke.map/maps-structs-endian-7.pk: Likewise.
	* testsuite/poke.map/maps-structs-endian-8.pk: Likewise.
	* testsuite/poke.map/maps-structs-endian-9.pk: Likewise.
	* testsuite/poke.map/maps-structs-endian-10.pk: Likewise.
	* testsuite/poke.map/maps-structs-endian-diag-1.pk: Likewise.
	* testsuite/poke.map/maps-structs-endian-11.pk: Likewise.
	* testsuite/poke.pkl/struct-types-endian-diag-1.pk: Remove test.
	* testsuite/poke.pkl/struct-types-endian-diag-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: pk_ios_size now reports size in bytes.
	* libpoke/ios.h: Likewise for ios_size.
	* libpoke/ios.c (ios_size): Adjust accordingly.
	* libpoke/pvm.jitter (iosize): Likewise.
	* poke/pk-cmd-ios.c (print_info_ios): Likewise.